KanboardDeployment/deploymentdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbkanboard
  namespace: ns-kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: dbkanboard
  template:
    metadata:
      labels:
       srv: dbkanboard
    spec:
      volumes:
      - name: kanboard-dba
        persistentVolumeClaim:
          claimName: dba-kanboard-dba
      - name: kanboard-cfg
        persistentVolumeClaim:
          claimName: dba-kanboard-cfg
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mariadb:latest
        name: dbkanboard
        ports:
        - containerPort: 3306
          protocol: TCP
          name: mariadb
        resources: {}
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: kanboard-dba
        - mountPath: "/etc/mysql"
          name: kanboard-cfg
status: {}
