KanboardDeployment/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanboard-service
  namespace: ns-kanboard
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
    protocol: TCP
  - name: https
    targetPort: 443
    port: 443
    protocol: TCP
  type: LoadBalancer
  selector:
    run: kanboard
